Cards turn blue when clicked on mobile bug fix

--- a/src/scss/game/players_deck.scss
+++ b/src/scss/game/players_deck.scss
@@ -6,7 +6,7 @@
   height: $card-height;
   width: 100%;
   margin-bottom: 6px;
-   z-index: 200;
+  z-index: 200;
 }
 .game__players-deck__card-spot-stack {
   margin: 0 multiplyCardWidth(0.025);
@@ -22,7 +22,7 @@
     height: $card-height;
     position: absolute;
     bottom: multiplyCardWidth($i, 0.09);
-    cursor: pointer;
+    //cursor: pointer;
     //border: 1px solid rgb(89, 3, 250);
   }
 }
